--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">ProjetM1_Prod</string>
     <string name="action_settings">Settings</string>
     <string name="bgche">gauche</string>
-    <string name="bmilieu">Menu</string>
+<!--     <string name="bmilieu">Explorer</string> -->
     <string name="bdroit">droit</string>
 
 </resources>
