--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ProjetM1_Prod</string>
+    <string name="app_name">Val\'Walk</string>
     <string name="action_settings">Settings</string>
     <string name="bgche">gauche</string>
 <!--     <string name="bmilieu">Explorer</string> -->
@@ -83,7 +83,7 @@
     <string name="msg_default_format">Format</string>
     <string name="msg_default_meta">Metadata</string>
     <string name="msg_default_mms_subject">Hi</string>
-    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
+    <string name="msg_default_status">Veuillez scanner votre QRcode dans le rectangle suivant.</string>
     <string name="msg_default_time">Time</string>
     <string name="msg_default_type">Type</string>
     <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
